<resources>
    <string name="app_name">Simple ToDo</string>


    <!-- HTTP Message -->
    <string name="not_found">Not Found</string>
    <string name="server_error">Server error</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="create_todo">Create ToDO</string>
    <string name="title">Title</string>
    <string name="create">Create</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="completed">Completed</string>
    <string name="search">Search</string>
    <string name="record_not_found">Record Not Found</string>
    <string name="not_complete">Not Complete</string>
    <string name="filter">Filter</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>


</resources>