<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_simple_round"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp"
        tools:ignore="UselessParent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tiet_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:hint="@string/title"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/rg_completed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp">

            <RadioButton
                android:id="@+id/rb_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/completed"
                android:textColor="@color/color_green_dark"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/rb_not_completed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/not_complete"
                android:textColor="@color/color_red_dark"
                android:textStyle="bold" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg_blue"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_update"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="1"
                android:background="@drawable/button_bg"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>